<resources>
    <string name="app_name">DingdangPorket</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="showtime">7</string>

    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="toolbar_title">叮当猫的口袋</string>
    <string name="toolbar_subtitle">有限的道具，无限的童真</string>

    <string name="nav_header_title">野比大雄</string>
    <string name="daily_tools">日常工具</string>
    <string name="photo_tools">图片工具</string>
    <string name="query_tools">查询工具</string>
    <string name="equipment_tools">设备工具</string>
    <string name="auxiliary_tools">辅助工具</string>
    <string name="other_tools">其它工具</string>

    <string name="account">叮当号/邮箱</string>
    <string name="password">密码</string>
    <string name="ac_hint">请输入账户</string>
    <string name="pw_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="network">叮当猫口袋</string>
    <string name="success">登录成功</string>
    <string name="fail">登录失败，剩余尝试次数：</string>
    <string name="forgot">忘记密码</string>
    <string name="register">注册账号</string>
    <string name="determine">确认</string>
    <string name="select">请选择语言</string>

    <string name="my_collection">我的收藏</string>
    <string name="update_log">更新日志</string>
    <string name="recommend_tools">推荐工具</string>
    <string name="default_log_detail">更新日志的详细描述</string>
    <string name="default_tools_detail">工具的详细描述</string>
    <string name="default_tools_name">工具名称</string>

    <string name="sign">赌书消得泼茶香，当时只道是寻常</string>

    <string name="gravity_left">left</string>
    <string name="gravity_center">center</string>
    <string name="gravity_right">right</string>

    <string name="has_been_collected">该工具已收藏！</string>
    <string name="add_collection_succeeded">添加收藏成功！</string>
    <string name="title_activity_time">time</string>

    <string name="rubbish_query_hint">请输入垃圾名称，如湿纸巾</string>
    <string name="get">提取</string>
    <string name="save_cover">保存封面</string>
    <string name="video_id_hint">请输入视频av号，如av19390801</string>

    <string name="cancel">取消</string>
    <string name="title">请选择时间</string>
    <string name="confirm">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="select_date">选择日期</string>
    <string name="birthday">出生日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
    <string name="network_error">网络出现了问题</string>
    <string name="incorrect_video_id">视频av号不正确</string>
    <string name="storage_img">保存图片需要开启存储权限</string>
    <string name="save_as">已保存在</string>
    <string name="save_fail">保存失败</string>
    <string name="view_saved_cover">查看已保存的封面</string>
    <string name="title_bilibili_cover">Bilibili视频封面提取</string>
    <string name="get_success">提取成功</string>
    <string name="view_img">查看已保存封面需要开启读取储存权限</string>
    <string name="title_rubbish_classify">垃圾分类查询</string>
    <string name="rubbish_name">垃圾名称</string>
    <string name="rubbish_classify_name">垃圾分类名称</string>
    <string name="query_success">查询成功</string>
    <string name="query_error">该垃圾暂未识别</string>
    <string name="title_history_today">历史上的今天</string>
</resources>
