<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_above="@+id/bottom_nav_view"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <!-- 大坑：为了配合CoordinatorLayout，触发向上滑动隐藏toolbar，使用NestedScrollView，RecylerView
         才兼容! SrollView和ListView之类不行 -->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewSortName"
                android:text="@string/update_log"
                android:layout_marginBottom="0sp"/>
            <TextView
                style="@style/TextDetail"
                android:text="@string/default_log_detail"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <View
                style="@style/ViewLine"/>
            <TextView
                style="@style/TextViewSortName"
                android:text="@string/recommend_tools"
                android:layout_marginBottom="0sp"/>

            <TextView
                style="@style/TextViewSortName"
                android:text="@string/default_tools_name"
                android:layout_marginBottom="0sp"
                android:textStyle="normal"/>
            <TextView
                style="@style/TextDetail"
                android:text="@string/default_tools_detail"/>
            <View
                style="@style/ViewLine.Small"/>

            <TextView
                style="@style/TextViewSortName"
                android:text="@string/default_tools_name"
                android:layout_marginBottom="0sp"
                android:textStyle="normal"/>
            <TextView
                style="@style/TextDetail"
                android:text="@string/default_tools_detail"/>
            <View
                style="@style/ViewLine.Small"/>

            <TextView
                style="@style/TextViewSortName"
                android:text="@string/default_tools_name"
                android:layout_marginBottom="0sp"
                android:textStyle="normal"/>
            <TextView
                style="@style/TextDetail"
                android:text="@string/default_tools_detail"/>


        </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
